src/objects/ISSPLoginSurvey__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Custom setting to manage the survey links when user Login from community</description>
    <fields>
        <fullName>PopupDelayTime__c</fullName>
        <label>PopupDelayTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Link__c</fullName>
        <label>Survey Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>ISSP LoginSurvey</label>
</CustomObject>